--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-simple-maps": "^3.0.0",
+    "serve": "^14.2.3",
     "tailwindcss": "^2.2.19",
-    "web-vitals": "^2.1.4",
-    "react-simple-maps": "^3.0.0"
-
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
+    "heroku-postbuild": "npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
