--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.12.0",
     "newrelic": "^12.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -13,6 +15,7 @@
     "react-scripts": "5.0.1",
     "react-simple-maps": "^3.0.0",
     "serve": "^14.2.3",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss": "^2.2.19",
     "web-vitals": "^2.1.4"
   },
