--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/fiber": "^8.17.10",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.12.0",
+    "framer-motion": "^11.13.1",
     "newrelic": "^12.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -17,6 +18,7 @@
     "serve": "^14.2.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^2.2.19",
+    "three": "^0.171.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
