--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "@react-three/fiber": "^8.17.10",
+    "@tabler/icons-react": "^3.24.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.13.1",
+    "framer-motion": "^11.13.3",
     "newrelic": "^12.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
