--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.13.3",
+    "framer-motion": "^11.13.5",
     "newrelic": "^12.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-simple-maps": "^3.0.0",
     "serve": "^14.2.3",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^2.2.19",
     "three": "^0.171.0",
